# EconomyVisualizer

./: CMakeLists.txt  README  categorizer.py  data.dump  dataImport.py  databaseHandler.py  economyVisualizer.py  economyvisualizer.pro  runcmake
src/: MainWindow.cpp  MainWindow.h  economyvisualizer.cpp
src/tools/: DataImport.cpp  DataImport.h  DatabaseManager.cpp  DatabaseManager.h  Transaction.h
